fix(ui): Fix button outline on Safari + refactor

--- a/frappe/public/scss/common/buttons.scss
+++ b/frappe/public/scss/common/buttons.scss
@@ -4,42 +4,16 @@
 	align-items: center;
 }
 
-@mixin button-with-highlight($highlightColor, $opacityBase: 0, $opacityHover: 1) {
+@mixin button-with-outline($outlineColor, $outlineWidthInitial: 0px, $outlineWidthHover: 2px) {
 	& {
-		--btn-highlight-color: #{$highlightColor};
-		position: relative;
+		--btn-outline-color: #{$outlineColor};
+		--btn-outline-width: #{$outlineWidthInitial};
 		overflow: visible;
+		box-shadow: 0 0 0 var(--btn-outline-width) var(--btn-outline-color), var(--btn-shadow) !important;
+		transition-timing-function: cubic-bezier(0.2, 0.9, 0.3, 1.2);
 	}
-
-	&::after {
-		content: "";
-		display: block;
-		position: absolute;
-
-		pointer-events: none;
-
-		top: 0px;
-		left: 0px;
-		width: 100%;
-		height: 100%;
-
-		border-radius: inherit;
-		background: none;
-
-		transition: all 50ms ease;
-		transition-property: opacity, outline-width;
-
-		opacity: $opacityBase;
-		outline: 1px solid var(--btn-highlight-color);
-		outline-offset: -1px;
-		transform: translateZ(0);
-	}
-
 	&:hover:not(:active), &:focus-visible {
-		&::after {
-			opacity: $opacityHover;
-			outline-width: 2px;
-		}
+		--btn-outline-width: #{$outlineWidthHover};
 	}
 }
 
@@ -93,7 +67,7 @@
 	color: var(--primary);
 	background-color: $primary-light;
 	--icon-stroke: currentColor;
-	@include button-with-highlight(var(--primary), 1);
+	@include button-with-outline(var(--primary), 1px);
 
 	[data-theme="dark"] & {
 		color: var(--text-color);
@@ -125,14 +99,14 @@
 	white-space: nowrap;
 	--icon-stroke: currentColor;
 	--icon-fill-bg: var(--primary);
-	@include button-with-highlight(var(--primary));
+	@include button-with-outline(var(--primary));
 }
 
 .btn.btn-danger {
 	background-color: var(--red-400);
 	color: var(--white);
 	--icon-stroke: currentColor;
-	@include button-with-highlight(var(--red-400));
+	@include button-with-outline(var(--red-400));
 }
 
 .btn-reset {
